<resources>
    <string name="app_name">LmsStudentKotlin</string>
    <string name="enter_email_username">Enter Email/Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="email_username">Email/Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>